# slothdb

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  TODO-2026-04-29.md  distribution-plan.md  install.sh  test.parquet
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  pages.yml  python-wheels.yml  release.yml
assets/: gen_hero.py  gen_vs_banner.py
bench/: README.md  bench_close_loss.py  bench_correctness.py  bench_dict_decode_sentinel.py  bench_losses.py  bench_one.py  bench_q11_ab.py  bench_q11_baseline.py  bench_q11_diag.py  bench_q11_diag2.py  bench_q11_final_ab.py  bench_q11_latemat.py  bench_q11_latemat_v2.py  bench_q11_only.py  bench_q11_q12_warm.py  bench_q20_n10.py  bench_q24_only.py  bench_q27_diag.py  check.py  check_like_qs.py  check_loss_queries.py  check_q11.py  check_q35_norm.py  check_regionid_cluster.py  check_url_enc.py  check_url_encoding.py  compare_q11_q12.py  decompose_q11.py  decompose_q21.py  diag_dict_sizes.py  diag_q11_distinct_share.py  diag_q11_mobile_clustering.py  diag_q14_layers.py  diag_q15_layers.py  diag_q20.py  diag_q25_layers.py  iso.py  iso_run.py  loop_diag_q15.py  loop_diag_q20.py  (+34 more)
bench/clickbench/: README.md  bench_loss_only.py  bench_one.py  clickbench_results.csv  make_charts.py  official_bench.py  official_results.csv  official_results.md  one_query.py  queries.sql  results-q23.md  results-revert.md  results-snapshot.md  verify_all.py
bench/correctness/: README.md
bench/correctness/sqllogictest/: README.md  dump_diffs.py  fetch_corpus.sh  guarded_run.py  runner.py
bench/sloth16/: README.md  queries.sql  results_10m_csv.md  results_10m_parquet.md
bench/taxi/: queries.sql  results_xaa.md.phaseA-baseline
cloudflare/cors-proxy/: README.md  worker.js  wrangler.toml
cmake/: CompilerOptions.cmake  Platform.cmake
docs/: ASK.md  CNAME  DOCUMENTATION.md  EDGE_BUILD.md  ROADMAP.md  SQL_REFERENCE.md  community.html  docs.html  index.html  robots.txt  sitemap.xml  style.css
docs/blog/: compiling-a-database-to-wasm.html
docs/playground/: README.md  app.js  index.html  slothdb.js  slothdb.wasm  styles.css
docs/playground/data/: generate.py  sales.csv  sales.parquet
examples/: README.md  employees.csv  orders.json
include/slothdb/api/: slothdb.h
include/slothdb/ask/: embedded_llm.hpp  llm_provider.hpp  nl_to_sql.hpp
include/slothdb/binder/: binder.hpp  bound_expression.hpp  bound_statement.hpp
include/slothdb/catalog/: catalog.hpp  catalog_entry.hpp  schema_catalog_entry.hpp  table_catalog_entry.hpp
include/slothdb/common/: allocator.hpp  constants.hpp  enums.hpp  exception.hpp  file_glob.hpp  parallel.hpp  string_util.hpp  thread_pool.hpp
include/slothdb/execution/: agg_emit_helpers.hpp  count_group_agg.hpp  dict_histogram.hpp  dictionary_vector.hpp  expression_executor.hpp  inline_row_agg.hpp  int_group_agg.hpp  literal_emit_filter.hpp  parallel_executor.hpp  physical_operator.hpp  physical_planner.hpp  q10_agg.hpp  q11_helper.hpp  (+14 more)
packaging/arch/: PKGBUILD
packaging/deb/: build-deb.sh
packaging/homebrew/: slothdb.rb
packaging/npm/: LICENSE  README.md  index.d.ts  index.mjs  package.json  slothdb.js  slothdb.wasm
packaging/rpm/: slothdb.spec
python/: README.md  pyproject.toml  setup.py
python/slothdb/: __init__.py  _demo.py
python/slothdb.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scripts/: build-wasm.sh
sloth-test/: PROGRESS.md  results.json  results_bench.json
src/: CMakeLists.txt
src/api/: slothdb_api.cpp
src/ask/: embedded_llm.cpp  llm_provider.cpp  nl_to_sql.cpp
src/binder/: binder.cpp
src/catalog/: catalog.cpp  schema_catalog_entry.cpp  table_catalog_entry.cpp
src/common/: allocator.cpp  enums.cpp  exception.cpp  file_glob.cpp  string_util.cpp  thread_pool.cpp
src/common/types/: data_chunk.cpp  hugeint.cpp  logical_type.cpp  selection_vector.cpp  validity_mask.cpp  value.cpp  vector.cpp
src/execution/: agg_emit_helpers.cpp  count_group_agg.cpp  dict_histogram.cpp  dictionary_vector.cpp  expression_executor.cpp  inline_row_agg.cpp  int_group_agg.cpp  literal_emit_filter.cpp  parallel_executor.cpp  physical_planner.cpp  q10_agg.cpp  q11_helper.cpp  q21_helper.cpp  q26_helper.cpp  q4_dict_histogram.cpp  q6_string_dedup.cpp  radix_count_agg.cpp  radix_multi_agg.cpp  str_group_distinct.cpp  string_dedup.cpp  substring_search.cpp  topk_varchar.cpp
src/execution/gpu/: cuda_kernels.cpp  gpu_engine.cpp  metal_kernels.cpp
src/extension/: extension_manager.cpp
src/main/: connection.cpp  database.cpp
src/optimizer/: optimizer.cpp
src/parser/: parser.cpp  tokenizer.cpp
src/planner/: planner.cpp
src/storage/: arrow_ipc.cpp  avro_reader.cpp  block_manager.cpp  checkpoint.cpp  column_data.cpp  csv_reader.cpp  data_table.cpp  excel_reader.cpp  fast_csv_reader.cpp  file_handle.cpp  hive_partition.cpp  http_client.cpp  json_reader.cpp  parquet.cpp  parquet_lazy_strdata.cpp  row_group.cpp  sqlite_scanner.cpp
src/storage/compression/: compression.cpp
src/transaction/: transaction.cpp
test/: CMakeLists.txt
test/fixtures/: simple.sqlite
test/unit/ask/: test_nl_to_sql.cpp
test/unit/binder/: test_binder.cpp
test/unit/catalog/: test_catalog.cpp
test/unit/common/: test_data_chunk.cpp  test_validity_mask.cpp  test_value.cpp  test_vector.cpp
test/unit/execution/: test_advanced_sql.cpp  test_aggregation.cpp  test_backlog.cpp  test_backlog2.cpp  test_between_explain_view.cpp  test_cte_union.cpp  test_date_functions.cpp  test_deferred.cpp  test_end_to_end.cpp  test_exists.cpp  test_extensions.cpp  test_httpfs.cpp  test_joins.cpp  test_optimizer.cpp  test_parallel.cpp  test_performance.cpp  test_recursive_merge.cpp  test_sql_features.cpp  test_timestamp_dual.cpp  test_transactions.cpp  test_update_delete.cpp  test_window_qualify.cpp
test/unit/parser/: test_parser.cpp  test_tokenizer.cpp
test/unit/storage/: test_arrow.cpp  test_compression.cpp  test_csv.cpp  test_data_table.cpp  test_json_fileio.cpp  test_parquet.cpp  test_persistence.cpp  test_sqlite.cpp
tools/playground/: wasm_bindings.cpp
tools/shell/: shell.cpp
(+41 files in other folders)
