[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slothdb"
version = "0.1.3"
description = "An embedded analytical database engine. Zero dependencies. GPU accelerated."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Sourav Roy", email = "souravroy7864@gmail.com"}
]
keywords = ["database", "olap", "analytics", "sql", "embedded", "parquet", "gpu"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
]

[project.urls]
Homepage = "https://github.com/SouravRoy-ETL/slothdb"
Repository = "https://github.com/SouravRoy-ETL/slothdb"
Issues = "https://github.com/SouravRoy-ETL/slothdb/issues"
